# clingo-server

./: .gitmodules  CMakeLists.txt  LICENSE  README.rst
cmake/: Flatbuffers.cmake
libcommscpp/: CMakeLists.txt
libcommscpp/include/clserver/: connection.hpp
libcommscpp/tests/: CMakeLists.txt  client_test.cpp  main_test1.cpp  server_test.cpp
schema/: README.rst  application_msg.fbs  init_connection.fbs  worker_ready_msg.fbs  worker_stopped_msg.fbs  worker_write.fbs
